[gd_scene load_steps=36 format=3 uid="uid://c56eo8bxo8rfm"]

[ext_resource type="Material" uid="uid://bbpq7sqphowlw" path="res://Sources/Materials/gray.tres" id="1_o5qli"]
[ext_resource type="Material" uid="uid://j4c4es30vthd" path="res://Sources/Materials/grass.tres" id="2_0wfyh"]
[ext_resource type="AudioStream" uid="uid://d1qrcvspy4gn3" path="res://Sources/Audio/forest-ambience.mp3" id="2_jkv2x"]
[ext_resource type="AudioStream" uid="uid://cvemset3trwte" path="res://Sources/Music/music-cozy.mp3" id="3_jbj1t"]
[ext_resource type="Script" uid="uid://b03io5xk8qkyb" path="res://Scripts/Player/Player.gd" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://ck0jeoayjtnu7" path="res://Scripts/Player/PlayerMovement.gd" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://c1gfibua1ldhh" path="res://Scripts/Player/PlayerCamera.gd" id="4_tefeu"]
[ext_resource type="PackedScene" uid="uid://5dbt6htr12sg" path="res://Sources/Meshes/Weapons/Swords/Sword_Basic.fbx" id="7_choun"]
[ext_resource type="Script" uid="uid://xnn6yc5vklyr" path="res://Scripts/character_skin.gd" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://c5a22yp7mejn0" path="res://Scripts/Player/PlayerCombat.gd" id="8_85g3d"]
[ext_resource type="PackedScene" uid="uid://cpswfllu5mpm6" path="res://Prefabs/Skins/character.tscn" id="8_tipki"]
[ext_resource type="PackedScene" uid="uid://ci4ftwvou63co" path="res://Prefabs/Enemies/orc.tscn" id="9_85g3d"]
[ext_resource type="AudioStream" uid="uid://brha1r07b38pc" path="res://Sources/Audio/sword-swing.mp3" id="10_eb6dy"]
[ext_resource type="AudioStream" uid="uid://chwjsg23od47w" path="res://Sources/Audio/footstep-grass.mp3" id="11_trceg"]
[ext_resource type="AudioStream" uid="uid://dlkkf0kt41eoh" path="res://Sources/Audio/player-death.mp3" id="12_a8y0u"]
[ext_resource type="AudioStream" uid="uid://cl7nm2h206xy5" path="res://Sources/Audio/take-damage.mp3" id="13_jkv2x"]
[ext_resource type="Script" uid="uid://b3ddjfm4fh5h6" path="res://Scripts/Enemies/Enemy_Group.gd" id="16_jscy8"]
[ext_resource type="PackedScene" uid="uid://c31n1bcksl7hk" path="res://Prefabs/NPCs/villager.tscn" id="17_muem4"]
[ext_resource type="Script" uid="uid://dto46lvw6hb0r" path="res://Scripts/UI/UI.gd" id="18_0ld40"]
[ext_resource type="Texture2D" uid="uid://kqt5j5bx603d" path="res://Sources/UI/DialogBox.png" id="18_dp3eg"]
[ext_resource type="Script" uid="uid://cvhqunexfryy2" path="res://Scripts/UI/Dialog_Panel.gd" id="20_gqmmt"]
[ext_resource type="Script" uid="uid://bcd307r6nycf7" path="res://Scripts/QuestSystem/Quest_System.gd" id="21_yc10j"]

[sub_resource type="PlaneMesh" id="PlaneMesh_0wfyh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tefeu"]
size = Vector3(1, 0.001, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sgp6g"]
sun_curve = 0.409812

[sub_resource type="Sky" id="Sky_o5qli"]
sky_material = SubResource("ProceduralSkyMaterial_sgp6g")

[sub_resource type="Environment" id="Environment_0wfyh"]
background_mode = 2
sky = SubResource("Sky_o5qli")
ambient_light_source = 3
ambient_light_color = Color(0.309094, 0.485383, 0.507822, 1)
tonemap_mode = 4
tonemap_exposure = 2.0
ssao_enabled = true
ssao_intensity = 4.0
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
adjustment_enabled = true
adjustment_contrast = 1.2
adjustment_saturation = 1.2

[sub_resource type="SphereShape3D" id="SphereShape3D_tefeu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0wfyh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_choun"]
radius = 0.64

[sub_resource type="BoxMesh" id="BoxMesh_sgp6g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dp3eg"]
texture = ExtResource("18_dp3eg")

[sub_resource type="LabelSettings" id="LabelSettings_dp3eg"]
font_color = Color(0.917626, 0.625403, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.360784)

[sub_resource type="LabelSettings" id="LabelSettings_0ld40"]
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.278431)

[sub_resource type="LabelSettings" id="LabelSettings_gqmmt"]
font_color = Color(1, 0.75624, 0.227137, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.388235)

[node name="Root" type="Node"]

[node name="Game_CanvasLayer" type="CanvasLayer" parent="."]

[node name="World" type="Node3D" parent="Game_CanvasLayer"]

[node name="Grass" type="MeshInstance3D" parent="Game_CanvasLayer/World"]
transform = Transform3D(44.7747, 0, 0, 0, 44.7747, 0, 0, 0, 44.7747, 0, 0, 0)
material_override = ExtResource("2_0wfyh")
mesh = SubResource("PlaneMesh_0wfyh")

[node name="StaticBody3D" type="StaticBody3D" parent="Game_CanvasLayer/World/Grass"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game_CanvasLayer/World/Grass/StaticBody3D"]
shape = SubResource("BoxShape3D_tefeu")

[node name="Audio" type="Node3D" parent="Game_CanvasLayer/World"]

[node name="ForestAmbience" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/World/Audio"]
stream = ExtResource("2_jkv2x")
attenuation_model = 3
volume_db = -17.0
autoplay = true
panning_strength = 0.0
playback_type = 1
parameters/looping = true

[node name="MusicCozy" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/World/Audio"]
stream = ExtResource("3_jbj1t")
attenuation_model = 3
volume_db = -25.0
autoplay = true
panning_strength = 0.0
playback_type = 1
parameters/looping = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Game_CanvasLayer"]
environment = SubResource("Environment_0wfyh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game_CanvasLayer"]
transform = Transform3D(-0.374366, -0.790887, 0.484096, 0.00317217, 0.520964, 0.853573, -0.927276, 0.321084, -0.192522, 0, 0, 0)
light_color = Color(0.919434, 0.866889, 0.726006, 1)
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.01
shadow_blur = 3.136

[node name="Player" type="Node3D" parent="Game_CanvasLayer"]
script = ExtResource("3_jyhfs")

[node name="CameraPivot" type="Node3D" parent="Game_CanvasLayer/Player"]
script = ExtResource("4_tefeu")

[node name="SpringArm3D" type="SpringArm3D" parent="Game_CanvasLayer/Player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.528, 0)
shape = SubResource("SphereShape3D_tefeu")
spring_length = 4.0

[node name="Camera" type="Camera3D" parent="Game_CanvasLayer/Player/CameraPivot/SpringArm3D"]
current = true

[node name="Body" type="CharacterBody3D" parent="Game_CanvasLayer/Player"]
script = ExtResource("4_tbgi4")
move_speed = 7.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game_CanvasLayer/Player/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0wfyh")

[node name="Skin" type="Node3D" parent="Game_CanvasLayer/Player/Body"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="character" parent="Game_CanvasLayer/Player/Body/Skin" instance=ExtResource("8_tipki")]
transform = Transform3D(0.377, 0, 0, 0, 0.377, 0, 0, 0, 0.377, 0, 0, 0)
script = ExtResource("7_o6xl0")

[node name="Skeleton3D" parent="Game_CanvasLayer/Player/Body/Skin/character/Armature" index="0"]
bones/1/rotation = Quaternion(0.0365303, 0.059433, -0.0103999, 0.997509)
bones/10/position = Vector3(0.0141904, 0.000879026, 0.00433575)
bones/10/rotation = Quaternion(-0.382031, 0.504157, 0.615394, -0.470286)
bones/12/position = Vector3(-0.0136084, 0.000903085, 0.00478483)
bones/12/rotation = Quaternion(0.42548, 0.535367, 0.586126, 0.434517)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Game_CanvasLayer/Player/Body/Skin/character/Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.230269, 0.0628684, 0.971094, -0.133387, -0.990531, 0.0324978, 0.963942, -0.122048, 0.236474, -0.012923, -0.00642685, 0.0174244)
bone_name = "Hand.R"
bone_idx = 12

[node name="Sword_Basic" parent="Game_CanvasLayer/Player/Body/Skin/character/Armature/Skeleton3D/BoneAttachment3D" instance=ExtResource("7_choun")]
transform = Transform3D(0.00121217, 0.00996768, -0.000593378, -0.00888667, 0.000804316, -0.00464286, -0.00455342, 0.00108376, 0.00890324, -0.004, 0, -0.001)

[node name="PlayerCombat" type="Node3D" parent="Game_CanvasLayer/Player/Body/Skin/character"]
transform = Transform3D(-2.65252, 0, -2.31891e-07, 0, 2.65252, 0, 2.31891e-07, 0, -2.65252, 0, 0, 0)
script = ExtResource("8_85g3d")

[node name="Area3D" type="Area3D" parent="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat" groups=["PlayerDamageHitbox"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat/Area3D"]
transform = Transform3D(-0.258819, -0.965926, 0, 0.965926, -0.258819, 0, 0, 0, 1, 0, 0.910638, -1.07622)
shape = SubResource("CapsuleShape3D_choun")

[node name="Cube" type="MeshInstance3D" parent="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat/Area3D/CollisionShape3D"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
visible = false
material_override = ExtResource("1_o5qli")
mesh = SubResource("BoxMesh_sgp6g")
skeleton = NodePath("../..")

[node name="AttackTimer" type="Timer" parent="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat"]
wait_time = 0.1
one_shot = true

[node name="SwordSwingSound" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/Player/Body"]
stream = ExtResource("10_eb6dy")
volume_db = -30.0

[node name="FootstepSound" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/Player/Body"]
stream = ExtResource("11_trceg")
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/Player/Body"]
stream = ExtResource("12_a8y0u")
volume_db = -20.0

[node name="HitSound" type="AudioStreamPlayer3D" parent="Game_CanvasLayer/Player/Body"]
stream = ExtResource("13_jkv2x")

[node name="Area3D" type="Area3D" parent="Game_CanvasLayer/Player/Body" groups=["Player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game_CanvasLayer/Player/Body/Area3D"]
transform = Transform3D(-0.258819, -0.965926, 0, 0.965926, -0.258819, 0, 0, 0, 1, 0, 0.871469, 0)
shape = SubResource("CapsuleShape3D_choun")

[node name="Cube" type="MeshInstance3D" parent="Game_CanvasLayer/Player/Body/Area3D/CollisionShape3D"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
visible = false
material_override = ExtResource("1_o5qli")
mesh = SubResource("BoxMesh_sgp6g")
skeleton = NodePath("../..")

[node name="Imp_Camp_01" type="Node3D" parent="Game_CanvasLayer" node_paths=PackedStringArray("villager_to_disable", "villager_to_enable")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7541, 0, -16.3523)
script = ExtResource("16_jscy8")
quest_on_clear = "Return to Carlos"
villager_to_disable = NodePath("../Villager_Carlos/Villager_Carlos_02")
villager_to_enable = NodePath("../Villager_Carlos/Villager_Carlos_03")

[node name="Imp_01" parent="Game_CanvasLayer/Imp_Camp_01" instance=ExtResource("9_85g3d")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 2.23387, -4.76837e-07, -0.794012)
health = 100.0
max_health = 100.0
move_speed = 5.0
damage = 25.0
attack_cooldown = 2

[node name="Imp_02" parent="Game_CanvasLayer/Imp_Camp_01" instance=ExtResource("9_85g3d")]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -1.45643, -2.38419e-07, -0.785412)
health = 100.0
max_health = 100.0
move_speed = 5.0
damage = 25.0
attack_cooldown = 2

[node name="Imp_03" parent="Game_CanvasLayer/Imp_Camp_01" instance=ExtResource("9_85g3d")]
transform = Transform3D(-1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, -1, 0.623571, -2.38419e-07, 2.40979)
health = 100.0
max_health = 100.0
move_speed = 5.0
damage = 25.0
attack_cooldown = 2

[node name="Villager_Carlos" type="Node3D" parent="Game_CanvasLayer"]
transform = Transform3D(-0.714668, 0, 0.699464, 0, 1, 0, -0.699464, 0, -0.714668, -7.89747, 0, 11.8138)

[node name="Villager_Carlos_01" parent="Game_CanvasLayer/Villager_Carlos" node_paths=PackedStringArray("next_villager") instance=ExtResource("17_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
display_name = "Carlos"
next_villager = NodePath("../Villager_Carlos_02")
lines = Array[String](["Hello adventurer, I would greatly appreciate your help!", "Imps have built a camp near our village...", "Could you do us a favor and clear them out?", "Thank you!"])
quest = "Clear out the nearby imp camp"

[node name="Villager_Carlos_02" parent="Game_CanvasLayer/Villager_Carlos" instance=ExtResource("17_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
display_name = "Carlos"
start_enabled = false
lines = Array[String](["Have you cleared out the imp camp yet?"])

[node name="Villager_Carlos_03" parent="Game_CanvasLayer/Villager_Carlos" node_paths=PackedStringArray("next_villager") instance=ExtResource("17_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
display_name = "Carlos"
next_villager = NodePath("../Villager_Carlos_04")
start_enabled = false
lines = Array[String](["Great job!", "Our village is immensely grateful!", "I'm glad I was able to help you on your personal GROWTH!"])
quest = "Find someone else to help"

[node name="Villager_Carlos_04" parent="Game_CanvasLayer/Villager_Carlos" instance=ExtResource("17_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
display_name = "Carlos"
start_enabled = false
lines = Array[String](["Howdy adventurer!", "Everything has been great since we last talked", "Maybe try seeing if someone else needs help?"])

[node name="UI_CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" type="Control" parent="UI_CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_0ld40")

[node name="Dialog_Panel" type="Panel" parent="UI_CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -257.0
offset_right = 256.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_dp3eg")
script = ExtResource("20_gqmmt")

[node name="Character_Name" type="Label" parent="UI_CanvasLayer/UI/Dialog_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -113.0
offset_right = 172.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
text = "NAME"
label_settings = SubResource("LabelSettings_dp3eg")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Message" type="Label" parent="UI_CanvasLayer/UI/Dialog_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -68.0
offset_right = 172.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
text = "Message"
label_settings = SubResource("LabelSettings_0ld40")
horizontal_alignment = 1

[node name="Quests" type="Control" parent="UI_CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_yc10j")

[node name="Title" type="Label" parent="UI_CanvasLayer/UI/Quests"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -211.0
offset_right = -24.0
offset_bottom = -188.0
grow_horizontal = 0
grow_vertical = 2
text = "Quests"
label_settings = SubResource("LabelSettings_gqmmt")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Current_Quest" type="Label" parent="UI_CanvasLayer/UI/Quests"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -334.0
offset_top = -171.0
offset_right = -24.0
offset_bottom = -148.0
grow_horizontal = 0
grow_vertical = 2
text = "- Talk to Carlos"
horizontal_alignment = 2

[connection signal="area_entered" from="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat/Area3D" to="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat/Area3D" to="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat" method="_on_area_3d_area_exited"]
[connection signal="area_entered" from="Game_CanvasLayer/Player/Body/Area3D" to="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Game_CanvasLayer/Player/Body/Area3D" to="Game_CanvasLayer/Player/Body/Skin/character/PlayerCombat" method="_on_area_3d_area_exited"]

[editable path="Game_CanvasLayer/Player/Body/Skin/character"]
